[package]
name = "pipfloat"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0 OR Zlib"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Terrible code to make firefox pip float"
repository = "https://github.com/morr0ne/pipfloat"
readme = "README.md"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
# panic = "abort"

[dependencies]
hyprland = "0.3.9"
