[package]
name = "pipfloat"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Federico Maria Morrone <contact@morrone.dev>"]
description = "Terrible code to make firefox pip float"
repository = "https://github.com/morr0ne/pipfloat"
readme = "README.md"
publish = false

[profile.release]
lto = true
codegen-units = 1
strip = true
# panic = "abort"

[dependencies]
hyprland-ipc = "0.0.4"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
